--- a/all/templates/login.html
+++ b/all/templates/login.html
@@ -12,7 +12,7 @@
         <form method="POST" action="{{ url_for('login') }}">
             <div class="form-group">
                 <label for="admin_id">Admin ID:</label>
-                <input type="text" id="admin_id" name="admin_id" required>
+<input type="text" id="admin_id" name="admin_id" required autocomplete="username">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
