--- a/all/templates/login.html
+++ b/all/templates/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <style> 
+    
+
+    </style>
 </head>
 <body>
     <div class="container">
