--- a/all/templates/base.html
+++ b/all/templates/base.html
@@ -138,11 +138,8 @@
         </div>
     </footer>
 
-    <!-- Google Translate Element -->
-    <div id="google_translate_element" style="display:none;"></div>
-    <button id="translate-btn" title="Translate Page" class="translate-button">
-        🌐 Translate
-    </button>
+<!-- Removed Google Translate functionality -->
+
 
     <!-- Theme Toggle Button -->
     <button class="theme-toggle" id="theme-toggle" title="Toggle Dark Mode">
